--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -31,7 +31,7 @@
 .home_hero_img {
   display: flex;
   flex: 1 0 0;
-  width: 40%;
+  width: 100%;
   object-fit: cover;
 
   border-radius: 20px;
@@ -84,7 +84,7 @@
 
   font-weight: 700;
   font-size: 18px;
-
+  text-align: center;
   background: #ffffff;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
