--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -66,6 +66,19 @@ button {
 //   margin: 0 0 10px;
 // }
 
+p {
+  font-size: 20px;
+  text-indent: 20px;
+}
+
+li {
+  font-size: 20px;
+}
+
+b {
+  font-size: 20px;
+}
+
 p + p,
 p + ul,
 p + ol {
